Add Op constructor
Inject Op dependecies via Op's constructor rather than populating its
fields directly.

Pros: Makes Op usable without an injection mechanism by allowing users
to simply call the (public) constructor. Allows to make fields final.
Effectively makes Ops POJOS again, with a little metaprogramming on top
of it only.

Cons: Each concrete implementation needs to specify all OpDependency
annotations, those are not inherited: un-DRY. More verbose since we need
to manually assign the ctor args to the fields (and/or possibly call
super ctors).