@@ -32,15 +32,20 @@ package org.scijava.ops.matcher;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Type;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 import org.scijava.core.Priority;
+import org.scijava.ops.MethodParameterOpDependencyMember;
+import org.scijava.ops.OpDependency;
 import org.scijava.ops.OpDependencyMember;
 import org.scijava.ops.OpUtils;
 import org.scijava.ops.core.Op;
 import org.scijava.param.ParameterStructs;
 import org.scijava.param.ValidityException;
 import org.scijava.plugin.Plugin;
+import org.scijava.struct.Member;
 import org.scijava.struct.Struct;
 import org.scijava.struct.StructInstance;
 import org.scijava.util.Types;
@@ -93,15 +98,23 @@ public class OpClassInfo implements OpInfo {
 	}
 
 	@Override
-	public StructInstance<?> createOpInstance(List<?> dependencies) {
-		final Object op;
+	public StructInstance<?> createOpInstance(
+		List<? extends Object> dependencies)
+	{
+		Object op = null;
 		try {
 			// TODO: Consider whether this is really the best way to
 			// instantiate the op class here. No framework usage?
 			// E.g., what about pluginService.createInstance?
-			Constructor<? extends Op> ctor = opClass.getDeclaredConstructor();
-			ctor.setAccessible(true);
-			op = ctor.newInstance();
+			Constructor<? extends Op> ctor = getConstructor();
+			try {
+				op = ctor.newInstance(dependencies.toArray());
+			}
+			catch (Exception ex) {
+				// TODO: This is just needed as long as not all Ops are ported to
+				// Op-constructor (also see the next lines).
+			}
+			if (op == null) op = opClass.getDeclaredConstructor().newInstance();
 		}
 		catch (final InstantiationException | IllegalAccessException
 				| NoSuchMethodException | SecurityException | IllegalArgumentException
@@ -116,7 +129,9 @@ public class OpClassInfo implements OpInfo {
 		for (int i = 0; i < dependencyMembers.size(); i++) {
 			final OpDependencyMember<?> dependencyMember = dependencyMembers.get(i);
 			try {
-				dependencyMember.createInstance(op).set(dependencies.get(i));
+				// TODO: "if" can be removed once all Ops use Op-constructor
+				if (!(dependencyMember instanceof MethodParameterOpDependencyMember))
+					dependencyMember.createInstance(op).set(dependencies.get(i));
 			}
 			catch (final Exception ex) {
 				// TODO: Improve error message. Used to include exact OpRef of Op
@@ -132,16 +147,32 @@ public class OpClassInfo implements OpInfo {
 		return struct().createInstance(op);
 	}
 
+	// TODO: We should store the (annotated) constructor to be used somewhere.
+	// Should be part of parsing. Maybe have a ConstructorMember that is a
+	// collection of OpDependency members or something like this.
+	private Constructor<? extends Op> getConstructor()
+		throws NoSuchMethodException, SecurityException
+	{
+		Optional<Constructor<?>> ctorOptional = Arrays.stream(opClass
+			.getDeclaredConstructors()).findAny().filter(c -> c.getAnnotationsByType(
+				OpDependency.class).length != 0);
+		final Constructor<? extends Op> ctor = ctorOptional.isPresent()
+			? (Constructor<? extends Op>) ctorOptional.get() : opClass
+				.getDeclaredConstructor();
+		ctor.setAccessible(true);
+		return ctor;
+	}
+
 	@Override
 	public ValidityException getValidityException() {
 		return validityException;
 	}
-	
+
 	@Override
 	public boolean isValid() {
 		return validityException == null;
 	}
-	
+
 	// -- Object methods --
 
 	@Override
